# sphinx-emoji-favicon

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check-formatting.yml  publish.yml  run-pytest.yml
sphinx_emoji_favicon/: __init__.py
test/: requirements.txt  test_build.py  test_parser.py
test/sample_project/source/: conf.py  index.rst  test_page.rst
