[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-emoji-favicon"
dynamic = ["version"]
description = "A simple sphinx extension to add emoji favicons to html pages."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "DeepPSP", email = "wenh06@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "docutils",
    "emoji",
    "requests",
    "sphinx",
]

[project.optional-dependencies]
dev = [
    "emoji",
    "sphinx-favicon",
    "tqdm",
]
test = [
    "emoji",
    "sphinx-favicon",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/DeepPSP/sphinx-emoji-favicon"

[tool.hatch.version]
path = "sphinx_emoji_favicon/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/sphinx_emoji_favicon",
]
